--- a/checklist/Base.lproj/Main.storyboard
+++ b/checklist/Base.lproj/Main.storyboard
@@ -6,10 +6,32 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Check-Liste-->
+        <!--All Lists-->
+        <scene sceneID="S3O-Ou-6ku">
+            <objects>
+                <tableViewController id="ZHb-MO-2tH" userLabel="All Lists" customClass="AllListsViewController" customModule="checklist" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="a6D-ch-65J">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <connections>
+                            <outlet property="dataSource" destination="ZHb-MO-2tH" id="wYe-bI-Zqb"/>
+                            <outlet property="delegate" destination="ZHb-MO-2tH" id="3Zx-3M-uWw"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="CheckListe" id="fhk-Yj-6rV"/>
+                    <connections>
+                        <segue destination="A3V-D0-HOm" kind="show" identifier="ShowChecklist" id="Z3A-VS-SFr"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dLX-eA-jhS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="173" y="15"/>
+        </scene>
+        <!--Checklist-->
         <scene sceneID="CZp-ph-XUw">
             <objects>
-                <tableViewController id="A3V-D0-HOm" customClass="ChecklistViewController" customModule="checklist" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="A3V-D0-HOm" userLabel="Checklist" customClass="ChecklistViewController" customModule="checklist" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="bsy-hn-2kf">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -48,7 +70,7 @@
                             <outlet property="delegate" destination="A3V-D0-HOm" id="911-4R-pcr"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Check-Liste" id="Al0-8u-Fpr">
+                    <navigationItem key="navigationItem" title="Name of the Checklist" largeTitleDisplayMode="never" id="Al0-8u-Fpr">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="HHP-ud-Ur6">
                             <connections>
                                 <segue destination="lBX-Ci-Mrg" kind="show" identifier="AddItem" id="xfL-lT-fHg"/>
@@ -136,12 +158,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="A3V-D0-HOm" kind="relationship" relationship="rootViewController" id="atk-eh-Yui"/>
+                        <segue destination="ZHb-MO-2tH" kind="relationship" relationship="rootViewController" id="SQz-jg-iit"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s5Q-7g-JJi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="35.625" y="16.901408450704224"/>
+            <point key="canvasLocation" x="-643" y="17"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
