--- a/checklist/Resources/Base.lproj/Main.storyboard
+++ b/checklist/Resources/Base.lproj/Main.storyboard
@@ -372,13 +372,34 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="datePicker" destination="PfN-8S-6iO" id="K59-Y5-bbm"/>
+                        <outlet property="datePickerCell" destination="afF-IF-6a2" id="i3c-SQ-sYb"/>
                         <outlet property="doneBarButtion" destination="Gkh-be-gR9" id="vXz-66-3nd"/>
                         <outlet property="dueDateLabel" destination="5em-Ef-t3c" id="Cnx-i4-6Zz"/>
-                        <outlet property="shouldRemindSwitch" destination="pI2-8t-7Ic" id="H4C-2F-DpD"/>
+                        <outlet property="shouldRemindSwitch" destination="pI2-8t-7Ic" id="bD2-FK-O7t"/>
                         <outlet property="textField" destination="GP2-41-m7l" id="Qn8-Pb-YM5"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XNN-Zj-4nH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" id="afF-IF-6a2">
+                    <rect key="frame" x="0.0" y="0.0" width="316" height="217"/>
+                    <autoresizingMask key="autoresizingMask"/>
+                    <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="afF-IF-6a2" id="aWe-CJ-XJC">
+                        <rect key="frame" x="0.0" y="0.0" width="316" height="217"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="PfN-8S-6iO">
+                                <rect key="frame" x="20" y="20" width="276" height="177"/>
+                            </datePicker>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="PfN-8S-6iO" firstAttribute="top" secondItem="aWe-CJ-XJC" secondAttribute="top" constant="20" symbolic="YES" id="WED-mh-7yx"/>
+                            <constraint firstAttribute="trailing" secondItem="PfN-8S-6iO" secondAttribute="trailing" constant="20" id="bbL-XI-CHp"/>
+                            <constraint firstAttribute="bottom" secondItem="PfN-8S-6iO" secondAttribute="bottom" constant="20" symbolic="YES" id="iuY-zg-OKD"/>
+                            <constraint firstItem="PfN-8S-6iO" firstAttribute="leading" secondItem="aWe-CJ-XJC" secondAttribute="leading" constant="20" id="v95-w3-oNd"/>
+                        </constraints>
+                    </tableViewCellContentView>
+                </tableViewCell>
             </objects>
             <point key="canvasLocation" x="1951.875" y="14.788732394366198"/>
         </scene>
