--- a/checklist/Resources/Base.lproj/Main.storyboard
+++ b/checklist/Resources/Base.lproj/Main.storyboard
@@ -79,19 +79,10 @@
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="3WU-7b-pAU">
                                         <rect key="frame" x="0.0" y="97.5" width="320" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3WU-7b-pAU" id="cJs-h7-G1Q">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3WU-7b-pAU" id="cJs-h7-G1Q">
                                             <rect key="frame" x="0.0" y="0.0" width="293" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Xmg-fn-U5Q">
-                                                    <rect key="frame" x="3" y="3" width="287" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
-                                                    <connections>
-                                                        <action selector="done" destination="BHW-6L-15X" eventType="editingDidEndOnExit" id="yjD-lO-WrE"/>
-                                                        <outlet property="delegate" destination="BHW-6L-15X" id="JFF-wT-9Vb"/>
-                                                    </connections>
-                                                </textField>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8R5-5R-cz5">
                                                     <rect key="frame" x="249" y="4.5" width="36" height="36"/>
                                                     <constraints>
@@ -112,10 +103,6 @@
                                                 <constraint firstItem="8R5-5R-cz5" firstAttribute="top" secondItem="cJs-h7-G1Q" secondAttribute="top" constant="4.5" id="6Du-Xm-RBL"/>
                                                 <constraint firstAttribute="bottom" secondItem="8R5-5R-cz5" secondAttribute="bottom" constant="3" id="9ur-V5-2DD"/>
                                                 <constraint firstItem="gu6-py-g9g" firstAttribute="leading" secondItem="cJs-h7-G1Q" secondAttribute="leadingMargin" constant="5" id="Cgx-WP-Eo7"/>
-                                                <constraint firstAttribute="bottom" secondItem="Xmg-fn-U5Q" secondAttribute="bottom" constant="3" id="Evv-Hm-j6a"/>
-                                                <constraint firstAttribute="trailing" secondItem="Xmg-fn-U5Q" secondAttribute="trailing" constant="3" id="GXy-fk-lSo"/>
-                                                <constraint firstItem="Xmg-fn-U5Q" firstAttribute="leading" secondItem="cJs-h7-G1Q" secondAttribute="leading" constant="3" id="WFr-Rn-abj"/>
-                                                <constraint firstItem="Xmg-fn-U5Q" firstAttribute="top" secondItem="cJs-h7-G1Q" secondAttribute="top" constant="3" id="lIl-B0-wQ1"/>
                                                 <constraint firstItem="gu6-py-g9g" firstAttribute="centerY" secondItem="8R5-5R-cz5" secondAttribute="centerY" id="nll-Ul-7Nm"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -390,6 +377,9 @@
                         <subviews>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="PfN-8S-6iO">
                                 <rect key="frame" x="20" y="20" width="276" height="177"/>
+                                <connections>
+                                    <action selector="dateChanged:" destination="lBX-Ci-Mrg" eventType="valueChanged" id="a36-iD-eZQ"/>
+                                </connections>
                             </datePicker>
                         </subviews>
                         <constraints>
