--- a/checklist/Resources/Base.lproj/Main.storyboard
+++ b/checklist/Resources/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                             <outlet property="delegate" destination="ZHb-MO-2tH" id="3Zx-3M-uWw"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="CheckLists" id="fhk-Yj-6rV">
+                    <navigationItem key="navigationItem" title="ToDo-Lists" id="fhk-Yj-6rV">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="34B-ou-rJh">
                             <connections>
                                 <segue destination="BHW-6L-15X" kind="show" identifier="AddChecklist" id="TUh-oI-FIE"/>
@@ -36,7 +36,7 @@
             </objects>
             <point key="canvasLocation" x="173" y="15"/>
         </scene>
-        <!--Add Checklist-->
+        <!--Add ToDo-List-->
         <scene sceneID="Ya7-8W-uh2">
             <objects>
                 <tableViewController storyboardIdentifier="ListDetailViewController" id="BHW-6L-15X" customClass="ListDetailViewController" customModule="checklist" customModuleProvider="target" sceneMemberID="viewController">
@@ -119,7 +119,7 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Add Checklist" largeTitleDisplayMode="never" id="Iir-xz-tFk">
+                    <navigationItem key="navigationItem" title="Add ToDo-List" largeTitleDisplayMode="never" id="Iir-xz-tFk">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="gsJ-PX-KUX">
                             <connections>
                                 <action selector="cancel" destination="BHW-6L-15X" id="5ff-JO-N28"/>
@@ -212,7 +212,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" tag="1002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMJ-hM-3CL">
                                             <rect key="frame" x="31" y="27" width="229" height="16.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -238,7 +238,7 @@
                             <outlet property="delegate" destination="A3V-D0-HOm" id="911-4R-pcr"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Name of the Checklist" largeTitleDisplayMode="never" id="Al0-8u-Fpr">
+                    <navigationItem key="navigationItem" title="Name of the ToDo-list" largeTitleDisplayMode="never" id="Al0-8u-Fpr">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="HHP-ud-Ur6">
                             <connections>
                                 <segue destination="lBX-Ci-Mrg" kind="show" identifier="AddItem" id="xfL-lT-fHg"/>
